# hs-zcat-small

./: CHANGELOG.md  Dockerfile  README.md  build-img.sh  build.sh  doc.sh  example.sh  fmt.sh  hs-zcat-small  hs-zcat-small.cabal  lint.sh  weeder.sh  weeder.toml
app/: Main.hs
src/: Zcat.hs
