cabal-version:      3.14
name:               hs-zcat-small
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror

library
    import:           warnings
    exposed-modules: Zcat
    build-depends:
        base >=4.3.0 && < 4.24.0,
        zlib >=0.6.0 && < 0.8.0,
        bytestring >=0.10.0 && < 0.13.0,
    hs-source-dirs:   src
    default-language: GHC2021

executable hs-zcat-small
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >=4.3.0 && < 4.24.0,
        zlib >=0.6.0 && < 0.8.0,
        bytestring >=0.10.0 && < 0.13.0,
        hs-zcat-small,
    hs-source-dirs:   app
    default-language: GHC2021
